# hardware

./: Document Todos.md  docker-compose.yml  hardware.code-workspace  loc.sh
crypto-dashboard-ui/: angular.json  package-lock.json  package.json
crypto-dashboard-ui/src/app/: app-routing.module.ts  app.component.spec.ts
crypto-dashboard-ui/src/app/module/auth/: auth.module.ts
crypto-dashboard-ui/src/app/module/auth/services/: token.service.ts
crypto-dashboard-ui/src/app/module/devices/models/: device.model.ts
crypto-dashboard-ui/src/app/module/devices/services/: hardware.repository.service.spec.ts  hardware.repository.service.ts
crypto-dashboard-ui/src/app/module/users/services/: user.repository.service.ts
crypto-users/: build.gradle
crypto-users/src/main/resources/db/migration/: V1_1_0__initial_migration.sql
dashboard-ui/: package-lock.json  package.json
dashboard-ui/src/app/: app-routing.module.ts  app.module.ts
dashboard-ui/src/app/layout/header/: header.component.html  header.component.ts
dashboard-ui/src/app/module/auth/guard/: auth.guard.spec.ts  auth.guard.ts
dashboard-ui/src/app/module/dashboard/: dashboard.module.ts
dashboard-ui/src/app/module/devices/: devices.module.ts
dashboard-ui/src/app/module/users/: users.module.ts
e2e/: cypress.json  package-lock.json  package.json
e2e/cypress/integration/: login.feature
e2e/cypress/support/: commands.js
e2e/steps/login/: login.js
hardware/: build.gradle
hardware/src/main/resources/: application.properties
stats-client/: Cargo.toml
stats-client/src/: client.rs  main.rs  stats.rs
(+121 files in other folders)
