[package]
name = "stats-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
futures = "0.3"
influxdb2 = "0.3"
clokwerk = "0.4.0-rc1"
tokio = { version = "1", features = ["full"] }
influxdb2-structmap = "0.2"
num-traits = "0.2"
systemstat = "0.2.2"
